# Agent-setup

./: .gitattributes  .gitignore  MISSED_THINGS.md  PLATFORMS.md  README.md  RULES.md
bench/: reasoning_loop_calibration.py
dashboard/: svelte.config.js
docs/: agentic-local-server.md  api.md  architecture.md  claude-code-settings.example.json  cluster-plan-ko.md  current-progress-ko.md  progress_report.md  secure-public-access.md
model-snapshots/: README.md  manifest.json
runtime/: README.md  agentic-local-20260701.tar.zst.enc  python-envs-macos-arm64-20260701.tar.zst
scripts/: bootstrap_macmini_worker.sh  cluster.env.example  cluster_connection.sh  cluster_exec.sh  configure_rdma_network.sh  configure_rdma_network_on_cluster.sh  download_qwen36_gguf_aria2.sh  enable_sshd_on_boot.sh  estimate_tflops.py  generate_model_manifest.py  llama-replicas.json.example  model.env.example  place_rdma_instance.sh  prepare_4node_minimax_m3_cluster.sh  restore_runtime_backup.sh  run_qwen36_gguf_server.sh  start_4node_exo_cluster.sh  start_agent_server.sh  start_cloudflare_tunnel.sh  start_llama_replica.sh  start_llama_server.sh  status_4node_exo_cluster.sh  stop_4node_exo_cluster.sh  sync_exo_model_to_cluster.sh  sync_model_to_cluster.sh  (+6 more)
tools/: pyproject.toml
tools/src/exo_tools/: account_cli.py  accounts.py  agent_server.py
tools/src/exo_tools/agent_core/: __init__.py  auth.py  environment.py  jobs.py  llm.py  resources.py  runner.py  schemas.py  store.py  tools.py  workspace.py
tools/tests/: test_accounts.py  test_agent_core.py  test_agent_server.py  test_auth.py
(+43 files in other folders)
